// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accomodation Item  Page should render accomodation item page correctly 1`] = `
<div>
  <h2 />
  <ul>
    Apart
  </ul>
  <ul />
  <button
    className="button"
    onClick={[Function]}
  >
    See our last available rooms &gt;
  </button>
</div>
`;

exports[`Accomodation Item  Page should render type if type exists 1`] = `
<div>
  <h2 />
  <ul>
    <li
      key="1"
      label="bed"
    >
      bed
    </li>
  </ul>
  <button
    className="button"
    onClick={[Function]}
  >
    See our last available rooms &gt;
  </button>
</div>
`;
